--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -46,8 +46,8 @@
             BECE
         </a>
         <a class="app-link" href="https://bit.ly/w3marketplace" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077976.png" alt="Market Icon"
-                style="filter: invert(1);"> Market Place
+            <img src="https://www.dropbox.com/scl/fi/dhcht8uzdg8f3is0hfzpj/_cart_.png?rlkey=sloyvczjh40sef755w55kiky2&dl=1"
+                alt="Market Icon" style="filter: invert(1);"> Market Place
         </a>
     </div>
 
