--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -23,31 +23,31 @@
             href="https://www.dropbox.com/scl/fi/gbqq776f8ncbd6h4vngnj/Academic-Hub.exe?rlkey=e1ac3irjobx987cr4ijidrmbl&dl=1"
             download>
             <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
-                alt="App Icon">
+                alt="App Icon" style="filter: brightness(0) invert();">
             Academic Hub (x64)
         </a>
         <a class="app-link"
             href="https://www.dropbox.com/scl/fi/zd243ajmdlvbu6ohmhwvi/Smart-SSCE.exe?rlkey=qb3yw7lx72arpzxezm9cq42ux&dl=1"
             download>
             <img src="https://www.dropbox.com/scl/fi/jvghnhgmnjamk5jc8rmas/mdle_logo.png?rlkey=o1zqlwvjv7wdf3op4ffbi95ma&dl=1"
-                alt="App Icon"> Smart
+                alt="App Icon" style="filter: brightness(0) invert();"> Smart
             SSCE
         </a>
         <a class="app-link"
             href="https://www.dropbox.com/scl/fi/9vafmyae07jciw3n5s55h/Academic-Hub-x32.exe?rlkey=zhhf34ynw99xlc827rjulwehq&dl=1"
             download>
             <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
-                alt="App Icon">
+                alt="App Icon" style="filter: brightness(0) invert();">
             Academic Hub (x32)
         </a>
         <a class="app-link" href="https://www.i3hub.com/installation/smartbece.exe" download>
             <img src="https://www.dropbox.com/scl/fi/vd730yq3xsa4jiwlbgx10/_bcelogo_.png?rlkey=7e4knopvvq5pvdivb69ppifr7&dl=1"
-                alt="App Icon"> Smart
+                alt="App Icon" style="filter: brightness(0) invert();"> Smart
             BECE
         </a>
         <a class="app-link" href="https://bit.ly/w3marketplace" target="_blank">
             <img src="https://www.dropbox.com/scl/fi/dhcht8uzdg8f3is0hfzpj/_cart_.png?rlkey=sloyvczjh40sef755w55kiky2&dl=1"
-                alt="Market Icon" style="filter: invert(1);"> Market Place
+                alt="Market Icon" style="filter: brightness(0) invert(1);"> Market Place
         </a>
     </div>
 
