--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I3 Hub - App Library</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="assets/_logo_i3.png" sizes="128x128" />
+    <link rel="icon" type="image/png" href="_logo_i3.png" sizes="128x128" />
     <script src="script.js" defer></script>
 </head>
 
@@ -14,7 +14,7 @@
     <!-- Hero Section -->
     <div class="hero">
         <!-- <div class="logo">I3 Hub</div> -->
-        <img src="assets/_logo_i3.png" alt="I3 Hub Logo" class="site-logo">
+        <img src="_logo_i3.png" alt="I3 Hub Logo" class="site-logo">
         <h1>Welcome to I3 Hub</h1>
         <p>Download our latest applications for an enhanced experience.</p>
     </div>
