--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -47,7 +47,7 @@
                 alt="App Icon" style="filter: brightness(0) invert();"> Smart
             BECE
         </a>
-        <a class="app-link" href="https://bit.ly/w3marketplace" target="_blank">
+        <a class="app-link" href="https://paystack.shop/w3pay" target="_blank">
             <img src="https://www.dropbox.com/scl/fi/dhcht8uzdg8f3is0hfzpj/_cart_.png?rlkey=sloyvczjh40sef755w55kiky2&dl=1"
                 alt="Market Icon" style="filter: brightness(0) invert(1);"> Market Place
         </a>
