--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -42,6 +42,11 @@
                 alt="App Icon" style="filter: brightness(0) invert();"> Smart NECO
             SSCE
         </a>
+        <a class="app-link" href="https://i3hub.com.ng/SmartNECOBECE.exe" download>
+            <img src="https://www.dropbox.com/scl/fi/jvghnhgmnjamk5jc8rmas/mdle_logo.png?rlkey=o1zqlwvjv7wdf3op4ffbi95ma&dl=1"
+                alt="App Icon" style="filter: brightness(0) invert();"> Smart NECO
+            BECE
+        </a>
         <a class="app-link"
             href="https://www.dropbox.com/scl/fi/7i4v2kz9xpk5cxdyl6e60/SmartBECE.exe?rlkey=yqu0xpxe4l619s4b193ostleg&dl=1"
             download>
