--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -49,7 +49,9 @@
                 alt="App Icon" style="filter: brightness(0) invert();"> W3
             SSCE
         </a>
-        <a class="app-link" href="https://i3hub.com.ng/SmartNECOBECE.exe" download>
+        <a class="app-link"
+            href="https://www.dropbox.com/scl/fi/i9w862ezexxnn6civruxv/W3-BECE.exe?rlkey=ary36h7gben35nrvr201tzb4p&dl=1"
+            download>
             <img src="https://www.dropbox.com/scl/fi/vd730yq3xsa4jiwlbgx10/_bcelogo_.png?rlkey=7e4knopvvq5pvdivb69ppifr7&dl=1"
                 alt="App Icon" style="filter: brightness(0) invert();"> W3
             BECE
