--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -45,14 +45,14 @@
         <a class="app-link"
             href="https://www.dropbox.com/scl/fi/zd243ajmdlvbu6ohmhwvi/Smart-SSCE.exe?rlkey=qb3yw7lx72arpzxezm9cq42ux&dl=1"
             download>
-            <img src="https://www.dropbox.com/scl/fi/jvghnhgmnjamk5jc8rmas/mdle_logo.png?rlkey=o1zqlwvjv7wdf3op4ffbi95ma&dl=1"
+            <img src="https://www.dropbox.com/scl/fi/8fj1wcm07jjqf4jnr6pf9/W3-SSCE.exe?rlkey=mnnvp1nhvm1dwxdza2znvc1ff&dl=1"
                 alt="App Icon" style="filter: brightness(0) invert();"> W3
             SSCE
         </a>
         <a class="app-link"
             href="https://www.dropbox.com/scl/fi/i9w862ezexxnn6civruxv/W3-BECE.exe?rlkey=ary36h7gben35nrvr201tzb4p&dl=1"
             download>
-            <img src="https://www.dropbox.com/scl/fi/vd730yq3xsa4jiwlbgx10/_bcelogo_.png?rlkey=7e4knopvvq5pvdivb69ppifr7&dl=1"
+            <img src="https://www.dropbox.com/scl/fi/i9w862ezexxnn6civruxv/W3-BECE.exe?rlkey=ary36h7gben35nrvr201tzb4p&dl=1"
                 alt="App Icon" style="filter: brightness(0) invert();"> W3
             BECE
         </a>
