--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -34,12 +34,12 @@
                 alt="App Icon" style="filter: brightness(0) invert();">
             W3 Academic Hub (x32)
         </a>
-        <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
+        <!-- <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="#" download>
             <img src="https://www.dropbox.com/scl/fi/vd730yq3xsa4jiwlbgx10/_bcelogo_.png?rlkey=7e4knopvvq5pvdivb69ppifr7&dl=1"
                 alt="App Icon" style="filter: brightness(0) invert();">
             Smart BECE Image Capture
-        </a>
+        </a> -->
         <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="https://www.dropbox.com/scl/fi/8fj1wcm07jjqf4jnr6pf9/W3-SSCE.exe?rlkey=mnnvp1nhvm1dwxdza2znvc1ff&dl=1"
             download>
