--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -2,8 +2,38 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description"
+        content="Download powerful student-focused apps from I3 Hub. Access tools for exam registration, academic tracking, image capture, and more – all in one secure portal." />
+    <meta name="keywords"
+        content="I3Hub, app download, academic tools, student management, exam software, school apps, BECE, SSCE, smart capture, educational software" />
+    <meta name="author" content="I3 Hub" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags for social previews -->
+    <meta property="og:title" content="I3 Hub - Download Student & Exam Tools" />
+    <meta property="og:description"
+        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
+    <meta property="og:image"
+        content="https://www.dropbox.com/scl/fi/ao88y6odl92mr9zhsbvx1/_logo_i3.png?rlkey=fcys9luq5gefdesz5mwrh0m05&dl=1" />
+    <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="I3 Hub" />
+
+    <!-- Twitter Card Meta -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="I3 Hub - Download Student & Exam Tools" />
+    <meta name="twitter:description"
+        content="Get the latest school and exam apps from I3 Hub. Streamline education and registration processes." />
+    <meta name="twitter:image"
+        content="https://www.dropbox.com/scl/fi/ao88y6odl92mr9zhsbvx1/_logo_i3.png?rlkey=fcys9luq5gefdesz5mwrh0m05&dl=1" />
+    <meta name="twitter:site" content="@i3hub" />
+    <meta name="twitter:creator" content="@i3hub" />
+
     <title>I3 Hub - App Library</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="_logo_i3.png" sizes="128x128" />
