--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -37,7 +37,7 @@
     <title>I3 Hub - App Library</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="_logo_i3.png" sizes="128x128" />
-    <script src="script.js" defer></script>
+    <!-- <script src="script.js" defer></script> -->
 </head>
 
 <body oncontextmenu="return false;">
