--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -36,14 +36,17 @@
 
     <title>I3 Hub - App Library</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="_logo_i3.png" sizes="128x128" />
+    <link rel="icon" type="image/png"
+        href="https://www.dropbox.com/scl/fi/ao88y6odl92mr9zhsbvx1/_logo_i3.png?rlkey=fcys9luq5gefdesz5mwrh0m05&dl=1"
+        sizes="128x128" />
     <!-- <script src="script.js" defer></script> -->
 </head>
 
 <body oncontextmenu="return false;">
     <!-- Hero Section -->
     <div class="hero">
-        <img src="_logo_i3.png" alt="I3 Hub Logo" class="site-logo">
+        <img src="https://www.dropbox.com/scl/fi/ao88y6odl92mr9zhsbvx1/_logo_i3.png?rlkey=fcys9luq5gefdesz5mwrh0m05&dl=1"
+            alt="I3 Hub Logo" class="site-logo">
         <h1>Welcome to I3 Hub</h1>
         <p>Download our latest applications for an enhanced experience.</p>
     </div>
