--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -19,7 +19,7 @@
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta property="og:image"
         content="https://www.dropbox.com/scl/fi/ao88y6odl92mr9zhsbvx1/_logo_i3.png?rlkey=fcys9luq5gefdesz5mwrh0m05&dl=1" />
-    <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub/" />
+    <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="I3 Hub" />
