Update ico and png

--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -17,8 +17,7 @@
     <meta property="og:title" content="I3 Hub - Download Student & Exam Tools" />
     <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
-    <meta property="og:image"
-        content="https://www.dropbox.com/scl/fi/ao88y6odl92mr9zhsbvx1/_logo_i3.png?rlkey=fcys9luq5gefdesz5mwrh0m05&dl=1" />
+    <meta property="og:image" content="I3Hub/assets/_logo_i3.png" />
     <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
@@ -29,24 +28,23 @@
     <meta name="twitter:title" content="I3 Hub - Download Student & Exam Tools" />
     <meta name="twitter:description"
         content="Get the latest school and exam apps from I3 Hub. Streamline education and registration processes." />
-    <meta name="twitter:image"
-        content="https://www.dropbox.com/scl/fi/ao88y6odl92mr9zhsbvx1/_logo_i3.png?rlkey=fcys9luq5gefdesz5mwrh0m05&dl=1" />
+    <meta name="twitter:image" content="/I3Hub/assets/_logo_i3.png" />
     <meta name="twitter:site" content="@i3hub" />
     <meta name="twitter:creator" content="@i3hub" />
 
+
     <title>I3 Hub - App Library</title>
+    <link rel="icon" href="/I3Hub/assets/_logo_i3.ico" type="image/ico">
+    <link rel="icon" href="/I3Hub/assets/_logo_i3.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png"
-        href="https://www.dropbox.com/scl/fi/ao88y6odl92mr9zhsbvx1/_logo_i3.png?rlkey=fcys9luq5gefdesz5mwrh0m05&dl=1"
-        sizes="128x128" />
+    <link rel="icon" type="image/png" href="/I3Hub/assets/_logo_i3.png" sizes="128x128" />
     <!-- <script src="script.js" defer></script> -->
 </head>
 
 <body oncontextmenu="return false;">
     <!-- Hero Section -->
     <div class="hero">
-        <img src="https://www.dropbox.com/scl/fi/ao88y6odl92mr9zhsbvx1/_logo_i3.png?rlkey=fcys9luq5gefdesz5mwrh0m05&dl=1"
-            alt="I3 Hub Logo" class="site-logo">
+        <img src="/I3Hub/assets/_logo_i3.png" alt="I3 Hub Logo" class="site-logo">
         <h1>Welcome to I3 Hub</h1>
         <p>Download our latest applications for an enhanced experience.</p>
     </div>
