--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -38,7 +38,6 @@
     <link rel="icon" href="/I3Hub/assets/_logo_i3.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="/I3Hub/assets/_logo_i3.png" sizes="128x128" />
-    <!-- <script src="script.js" defer></script> -->
 </head>
 
 <body oncontextmenu="return false;">
@@ -100,8 +99,8 @@
     <div class="footer">
         &copy; 2025 I3 Hub | All rights reserved.
     </div>
-
-    <script>
+    <script src="script.js" defer></script>
+    <!-- <script>
         const colors = [
             '#1eb580', '#1a2b4c', '#00bfae', '#00c7d1', '#00ff7f', '#2c3e50',
             '#7f8c8d', '#34495e', '#16a085', '#2ecc71', '#2980b9', '#9b59b6',
@@ -123,7 +122,7 @@
         };
 
         document.getElementById('colorToggleBtn').addEventListener('click', setRandomColor);
-    </script>
+    </script> -->
 
 </body>
 
