--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -52,41 +52,41 @@
         <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="https://www.dropbox.com/scl/fi/gbqq776f8ncbd6h4vngnj/Academic-Hub.exe?rlkey=e1ac3irjobx987cr4ijidrmbl&dl=1"
             download>
-            <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
-                alt="App Icon" style="filter: brightness(0) invert();">
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/logo.png" alt="App Icon"
+                style="filter: brightness(0) invert();">
             W3 Academic Hub (x64)
         </a>
         <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="https://www.dropbox.com/scl/fi/9vafmyae07jciw3n5s55h/Academic-Hub-x32.exe?rlkey=zhhf34ynw99xlc827rjulwehq&dl=1"
             download>
-            <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
-                alt="App Icon" style="filter: brightness(0) invert();">
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/logo.png" alt="App Icon"
+                style="filter: brightness(0) invert();">
             W3 Academic Hub (x32)
         </a>
         <!-- <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="#" download>
-            <img src="https://www.dropbox.com/scl/fi/vd730yq3xsa4jiwlbgx10/_bcelogo_.png?rlkey=7e4knopvvq5pvdivb69ppifr7&dl=1"
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/_bcelogo_.png"
                 alt="App Icon" style="filter: brightness(0) invert();">
             Smart BECE Image Capture
         </a> -->
         <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="https://www.dropbox.com/scl/fi/8fj1wcm07jjqf4jnr6pf9/W3-SSCE.exe?rlkey=mnnvp1nhvm1dwxdza2znvc1ff&dl=1"
             download>
-            <img src="https://www.dropbox.com/scl/fi/u8fkbs8kr359y3v3hi6be/_scelogo_.png?rlkey=cfhsqphs8edjajb24olfo5rkr&dl=1"
-                alt="App Icon" style="filter: brightness(0) invert();">
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/_scelogo_.png" alt="App Icon"
+                style="filter: brightness(0) invert();">
             W3 SSCE
         </a>
         <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="https://www.dropbox.com/scl/fi/i9w862ezexxnn6civruxv/W3-BECE.exe?rlkey=ary36h7gben35nrvr201tzb4p&dl=1"
             download>
-            <img src="https://www.dropbox.com/scl/fi/vd730yq3xsa4jiwlbgx10/_bcelogo_.png?rlkey=7e4knopvvq5pvdivb69ppifr7&dl=1"
-                alt="App Icon" style="filter: brightness(0) invert();">
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/_bcelogo_.png" alt="App Icon"
+                style="filter: brightness(0) invert();">
             W3 BECE
         </a>
         <a class="app-link" href="javascript:void(0);" onclick="window.open(this.getAttribute('data-href'), '_blank')"
             data-href="https://paystack.shop/w3pay">
-            <img src="https://www.dropbox.com/scl/fi/dhcht8uzdg8f3is0hfzpj/_cart_.png?rlkey=sloyvczjh40sef755w55kiky2&dl=1"
-                alt="Market Icon" style="filter: brightness(0) invert(1);">
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/_cart_.png" alt="Market Icon"
+                style="filter: brightness(0) invert(1);">
             Market Place
         </a>
     </div>
