--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -28,21 +28,21 @@
     <meta name="twitter:title" content="I3 Hub - Download Student & Exam Tools" />
     <meta name="twitter:description"
         content="Get the latest school and exam apps from I3 Hub. Streamline education and registration processes." />
-    <meta name="twitter:image" content="/https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" />
+    <meta name="twitter:image" content="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" />
     <meta name="twitter:site" content="@i3hub" />
     <meta name="twitter:creator" content="@i3hub" />
 
     <title>I3 Hub - App Library</title>
     <link rel="icon" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.ico" type="image/ico">
-    <link rel="icon" href="/https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" type="image/png">
+    <link rel="icon" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="/https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" sizes="128x128" />
+    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" sizes="128x128" />
 </head>
 
 <body oncontextmenu="return false;">
     <!-- Hero Section -->
     <div class="hero">
-        <img src="/https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" alt="I3 Hub Logo" class="site-logo">
+        <img src="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" alt="I3 Hub Logo" class="site-logo">
         <h1>Welcome to I3 Hub</h1>
         <p>Download our latest applications for an enhanced experience.</p>
     </div>
