--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="I3 Hub" />
     <meta name="robots" content="index, follow" />
 
-    <!-- Open Graph Meta Tags for social previews -->
+    <!-- Open Graph Meta Tags for social media previews -->
     <meta property="og:title" content="I3 Hub - Download Student & Exam Tools" />
     <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
@@ -22,6 +22,12 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="I3 Hub" />
+
+    <!-- WhatsApp & general social preview support -->
+    <meta itemprop="name" content="I3 Hub - App Library">
+    <meta itemprop="description"
+        content="Explore and download powerful apps built for schools, exams, and student success.">
+    <meta itemprop="image" content="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png">
 
     <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -33,11 +39,16 @@
     <meta name="twitter:creator" content="@i3hub" />
 
     <title>I3 Hub - App Library</title>
-    <link rel="icon" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.ico" type="image/ico">
-    <link rel="icon" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" type="image/png">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" sizes="128x128" />
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.ico">
+    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" sizes="96x96">
+    <link rel="apple-touch-icon" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png">
+
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 
 <body oncontextmenu="return false;">
     <!-- Hero Section -->
