--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -23,6 +23,15 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="I3 Hub" />
 
+    <meta property="og:title" content="I3 Hub - Download Student & Exam Tools" />
+    <meta property="og:description"
+        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
+    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" />
+    <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="I3 Hub" />
+
     <!-- WhatsApp & general social preview support -->
     <meta itemprop="name" content="I3 Hub - App Library">
     <meta itemprop="description"
